WEBSITE: https://r-ega.net

## Changes in version 2.0.7

+ FIX: mixed data with missing data in `network.predictability`

+ UPDATE: NEWS is now formatted in markdown


## Changes in version 2.0.6

+ FIX: bug when using `na.data = "listwise"` in standard `cor()` function

+ FIX: update to revised network loadings signs: `net.loads(..., loading.method = "experimental")`

+ FIX: bug in argument 'returnAllResults' for `EBICglasso.qgraph`

+ FIX: bug when passing additional non-`dimensionStability` arguments into `bootEGA`

+ FIX: bug when printing `hierEGA` summary from `bootEGA`

+ UPDATE: colors in `itemStability` plots will match colors of `hierEGA` plot

+ UPDATE: `network.predictability` uses empirical inverse variances (rather than network-implied)

+ UPDATE: R-squared in `continuous_accuracy` helper uses Pearson's correlation squared


## Changes in version 2.0.5

+ FIX: 'stroke' parameter in `hierEGA` that broke with {ggplot2} update

+ ADD: `network.predictability` to predict new data based on a network

+ ADD: `network.generalizability` to estimate network generalizability to new data (leverages `network.predictability`)

+ UPDATE: new loadings (`net.loads(..., loading.method = "experimental")`) have been added to resolve issues in original loadings (e.g., signs, cross-loadings, standardization) 

+ UPDATE: `plot.bootEGA` will output `itemStability` plot by default

+ UPDATE: `dimensionStability` output now included in `bootEGA` as output `$stability`

+ UPDATE: 'rotate' argument added to `infoCluster` plot to allow for different angle of dendrogram

+ DEPENDENCY: {fungible} is now 'IMPORTS' over 'SUGGESTS' for dependency in new loadings

+ DEPRECATED: `typicalStructure` and `plot.typicalStructure` have been deprecated to `FALSE`


## Changes in version 2.0.4

+ FIX: plotting for `infoCluster` when there are grey lines involved (or not)

+ FIX: pass of multiple passes of `resolution_parameter` causing an error in {igraph} 2.0.0 for `EGA.fit` (see issue #148)
